fix scrollbar gradient background

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,12 @@
     }
 }
 /* Scroll bar Styles  */ 
+/* - Firefox */ 
+html{
+    scrollbar-gutter: stable;
+    scrollbar-width: 10px;
+    scroll-behavior: smooth;
+}
 /* - Chrome and Safari */ 
 ::-webkit-scrollbar {
     width: 10px; 
@@ -150,13 +156,7 @@
 ::-webkit-scrollbar-thumb:hover{
     background: var(--gradient-image-to-top);
 }
-/* - Firefox */ 
-html{
-    scrollbar-color: var(--red) var(--black-20); 
-    scrollbar-gutter: stable;
-    scrollbar-width: 10px;
-    scroll-behavior: smooth;
-}
+/* - Global Styles */ 
 body{
     margin: 0;
     font-family: var(--main-font);
